update mobile navbar section add new option like information

--- a/index.html
+++ b/index.html
@@ -44,8 +44,28 @@
                     <a>CONTACT</a>
                 </div>
             </div>
+            <div class="about-nav">
+                <p>Information</p>
+                <a>About us</a>
+                <a>Online enquiry</a>
+                <a>Call us</a>
+                <a>Genral enquiry</a>
+                <a>Booking conditions</a>
+                <a>Privacy policy</a>
+                <a>Refund policy</a>
+    
+            </div>
         </div>
     </nav>
+
+
+
+
+
+
+
+
+
 
     <section>
         <div class="land">
