--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <img src="./img/nastol.com.au img.png" alt="">
             <h2>ENJOY FREEDOM LAND</h2>
         </div>
-        <div class="mauritius">
+        <div class="mauritius reveal">
             <div>
                 <span>Mauritius</span>
                 <img src="./img/dropdown.png" alt="">
@@ -102,7 +102,7 @@
 
 
     <section>
-        <div class="vacation">
+        <div class="vacation reveal">
             <div class="vacation-heading">
                 <h2>See latest vacation ideas</h2>
                 <!-- <img src="./img/title_separator-removebg-preview.png" alt=""> -->
@@ -113,7 +113,7 @@
                 <i class="fa-regular fa-circle"></i>
             </div>
 
-            <div class="vacation-cart">
+            <div class="vacation-cart ">
                 <div class="beachfront">
                     <img src="./img/Layer 14.png" alt="">
                     <div class="escapes">
@@ -156,7 +156,7 @@
                 <i class="fa-regular fa-circle"></i>
             </div>
             <div class="holiday-cart">
-                <div class="locations">
+                <div class="locations reveal">
                     <div class="thalie">
                         <div class="img">
                             <div class="img-main">
@@ -273,7 +273,7 @@
 
 
     <section>
-        <div class="different">
+        <div class="different reveal">
             <div class="different-headding">
                 <h2>Why we are different</h2>
                 <i class="fa-regular fa-circle"></i>
@@ -284,7 +284,7 @@
             </div>
 
 
-            <div class="different-cart">
+            <div class="different-cart ">
                 <div>
                     <span>
                         <i class="fa-light fa-solid fa-scissors fa-rotate-90"></i>
@@ -320,9 +320,9 @@
 
 
     <section>
-        <div class="massage">
+        <div class="massage reveal">
             <img src="./img/Layer 25.png" alt="">
-            <div class="contect-us">
+            <div class="contect-us reveal">
                 <h3>Send us a message</h3>
                 <p>
                     <input type="text" placeholder="Name">
@@ -414,6 +414,28 @@
         </div>
 
     </footer>
+
+
+
+    <script>
+        function reveal() {
+          var reveals = document.querySelectorAll(".reveal");
+  
+          for (var i = 0; i < reveals.length; i++) {
+            var windowHeight = window.innerHeight;
+            var elementTop = reveals[i].getBoundingClientRect().top;
+            var elementVisible = 150;
+  
+            if (elementTop < windowHeight - elementVisible) {
+              reveals[i].classList.add("active");
+            } else {
+              reveals[i].classList.remove("active");
+            }
+          }
+        }
+  
+        window.addEventListener("scroll", reveal);
+      </script>
 </body>
 
 </html>
