--- a/index.html
+++ b/index.html
@@ -337,28 +337,30 @@
     <footer>
         <div class="footer">
             <div class="about">
-                <div>
-                    <p>Information</p>
-                    <a>About us</a>
-                    <a>Online enquiry</a>
-                    <a>Call us</a>
-                    <a>Genral enquiry</a>
-                    <a>Booking conditions</a>
-                    <a>Privacy policy</a>
-                    <a>Refund policy</a>
+                <div class="info">
+                    <div >
+                        <p>Information</p>
+                        <a>About us</a>
+                        <a>Online enquiry</a>
+                        <a>Call us</a>
+                        <a>Genral enquiry</a>
+                        <a>Booking conditions</a>
+                        <a>Privacy policy</a>
+                        <a>Refund policy</a>
+                    </div>
+                    <div>
+                        <p>Experiences</p>
+                        <a>Beach</a>
+                        <a>Adventure</a>
+                        <a>Wildlife</a>
+                        <a>Honeymoon</a>
+                        <a>Culture & heritage</a>
+                        <a>Nature</a>
+                        <a>Spiritual</a>
+                        <a>Hill station</a>
+                    </div>
                 </div>
-                <div>
-                    <p>Experiences</p>
-                    <a>Beach</a>
-                    <a>Adventure</a>
-                    <a>Wildlife</a>
-                    <a>Honeymoon</a>
-                    <a>Culture & heritage</a>
-                    <a>Nature</a>
-                    <a>Spiritual</a>
-                    <a>Hill station</a>
-                </div>
-                <div>
+                <div class="thems">
                     <p>Thems</p>
                     <a>Party</a>
                     <a>Wedding</a>
