add button background color

--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
 
 
 
-                <div class="locations">
-                    <div class="thalie">
+                <div class="locations reveal">
+                    <div class="thalie ">
                         <div class="img">
                             <div class="img-main">
                                 <img src="./img/Layer 17.png" alt="">
