--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <img src="./img/nastol.com.au img.png" alt="">
             <h2>ENJOY FREEDOM LAND</h2>
         </div>
-        <div class="mauritius reveal">
+        <div class="mauritius">
             <div>
                 <span>Mauritius</span>
                 <img src="./img/dropdown.png" alt="">
